# elloraa

./: AGENTS.md  STATUS.md  pyproject.toml  run_stage1_on_cloud.sh  setup.sh
.github/: copilot-instructions.md
assets/scripts/: script.md
documentations/: indextts2.md
outputs/manifests/: director_plan.md  manifest.json  test.md
past_chats/: chat-export-2026-06-21T07-49-45.md  new - chat 2.md  new chat.md
scripts/: patch_indextts.py
src/: config.py  manifest.py  pipeline.py
src/stages/: stage0_director.py  stage0a_planner.py  stage0b_formatter.py  stage1_voice.py
src/testing/: director_lab.py  director_lab_config.json  lab_config.json  prompt_lab.py  script_slicer.py
src/testing/outputs/: exp1_pass1.md  exp1_pass2.md  exp1_pass3.md
src/testing/prompts/: sys_pass1.txt  sys_pass2.txt  sys_pass3.txt
src/utils/: llm_client.py
testing/: scratch_classify_tones.py  test_calm.py  test_curious.py  test_normal.py  test_soft_laugh.py
