[project]
name = "ellora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.49.2",
    "indextts",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "transformers<5.0",
    "vllm>=0.6.0",
]

[tool.uv.sources]
indextts = { path = "repos/index-tts", editable = true }

[tool.uv.extra-build-dependencies]
vllm = ["distutils.fancy_getopt"]
